[project]
name = "jmcomic-crawler-server"
version = "0.1.0"
description = "A server to download comics from jmcomic."
requires-python = ">=3.10"
dependencies = [
    "jmcomic>=2.6.9",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pillow>=10.3.0",
    "img2pdf>=0.5.1",
    "pyzipper>=0.3.6",
    "pikepdf>=9.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
start = "src.main:start"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
